Fix Firefox blurry SVG rendering

--- a/src/less/components/utility.less
+++ b/src/less/components/utility.less
@@ -337,6 +337,12 @@
 .uk-svg [fill*='#'] { fill: currentcolor; }
 .uk-svg [stroke*='#'] { stroke: currentcolor; }
 
+/*
+ * Fix Firefox blurry SVG rendering: https://bugzilla.mozilla.org/show_bug.cgi?id=1046835
+ */
+
+.uk-svg { transform: translate(0,0); }
+
 
 /* Disabled State
  ========================================================================== */
